Add `.gitignore` entry to exclude `application.properties` from version control